Listando eventos desde app movil con servicio Rest Get, OK

--- a/EventosUptc/src/app/home/home.page.html
+++ b/EventosUptc/src/app/home/home.page.html
@@ -9,46 +9,14 @@
   </ion-toolbar>
 </ion-header>
 
-
-
 <ion-content>
-  <div class="GridHome">
-    <ion-grid>
-      <ion-row>
-        <ion-col>
-          <div class="photo">
-            <img src="../../assets/images/logo.JPG">
-          </div>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col>
-          <br>
-          <br>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col>
-          <br>
-          <br>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col>
-          <div>
-            <ion-button expand="block" routerLink='/home' color="medium">Ver Eventos.</ion-button>
-          </div>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col>
-          <div>
-            <ion-button expand="block" routerLink='/home' color="medium">Ingresar.</ion-button>
-          </div>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+  <div class="photo">
+    <img src="../../assets/images/logo.JPG">
   </div>
-
-
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>Primera Version App Movil</ion-title>
+  </ion-toolbar>
+</ion-footer>
