--- a/EventosUptc/src/app/home/home.page.scss
+++ b/EventosUptc/src/app/home/home.page.scss
@@ -3,11 +3,7 @@
     --ion-safe-area-bottom: 22px;
 }
 .photo{
-    width: 100%;
-    height: 100%;
-    margin-left: 15%;
-}
-
-.menu{
-    padding-top: 50px;
+    
+   padding-top: 30%;
+   padding-left: 15%;
 }
