--- a/EventosUptc/src/app/app.component.html
+++ b/EventosUptc/src/app/app.component.html
@@ -1,13 +1,30 @@
 <ion-app>
-    <ion-menu contentId="content1" side="start">
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Menu</ion-title>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content>
-        menu stuff
-      </ion-content>
-    </ion-menu>
-    <ion-router-outlet id="content1" main></ion-router-outlet>
-  </ion-app>
+  <ion-menu contentId="content1" side="start">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-item>
+          <ion-icon name="home" slot="start"></ion-icon>
+          <ion-label routerLink='/home'>Home</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="person" slot="start"></ion-icon>
+          <ion-label routerLink='/login'>Login</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="help-circle" slot="start"></ion-icon>
+          <ion-label>Sugerencias</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="bug" slot="start"></ion-icon>
+          <ion-label>Reporte Bug</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="content1" main></ion-router-outlet>
+</ion-app>
