--- a/EventosUptc/src/app/main-event/main-event.page.html
+++ b/EventosUptc/src/app/main-event/main-event.page.html
@@ -1,12 +1,41 @@
-<ion-header>
+<ion-header translucent>
   <ion-toolbar>
-    <ion-title>Main Event</ion-title>
+    <ion-buttons slot="start">
+      <ion-button routerLink='/home'>
+        <ion-icon slot="icon-only" name="home"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button routerLink='/home'>
+        <ion-icon slot="icon-only" name="notifications-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title>EVENTOS</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    <h2>Llamado servicios</h2>
-    <input value="Consultar eVENTOS" type="submit" (click)="consultarEventos()" />
-    <pre>{{ listaEventos | json }}</pre>
- 
+  <ion-grid>
+    <ion-row justify-content-center>
+      <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+        <ion-segment>
+          <ion-segment-button checked *ngFor="let item of lista">
+            <ion-label>{{item}}</ion-label>
+          </ion-segment-button>
+        </ion-segment>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <h2>Llamado servicios</h2>
+  <input value="Consultar EVENTOS" type="submit" (click)="initEventos()" />
+  <pre>{{ listaEventos | json }}</pre>
+  <ion-list *ngFor="let item of listaEventos">
+    <ion-list-header>Eventos por categoria "Checkeada" </ion-list-header>
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="./thumbnail.svg">
+      </ion-thumbnail>
+      <ion-label>{{item.tituloE}}</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
